[skip ci] feat: Add endpoint and types for checking admin token existence
